# large-vision-models

./: .gitignore  pyproject.toml
notebooks/: vit_jax_flax.ipynb
src/lvm/: __main__.py  train_jax.py
src/lvm/models/vit/jax/: model.py
src/lvm/trainer/jax/: trainer.py
