[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lvm"
description = 'Large Vision Models'
readme = "README.md"
requires-python = ">=3.8"
license = ""
keywords = []
authors = [
  { name = "Sam Foreman", email = "saforem2@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "mpi4py",
  "torch",
  "xarray",
  "plotext",
  "ml_dtypes",
  "jax",
  "jaxlib",
  "jaxtyping",
  "flax",
  "sh",
  "joblib",
  "rich",
  "hydra-core",
  "wandb",
  "hydra-colorlog",
  "ambivalent @ git+https://github.com/saforem2/ambivalent",
  "enrich @ git+https://github.com/saforem2/enrich",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "pudb",
  "nodejs",
  "pynvim",
  "neovim",
  "ruff",
  "ruff-lsp",
  "pyproject-flake8",
  "black",
  "mypy",
  "ipython",
  "ptipython",
]

[project.urls]
Documentation = "https://saforem2.github.io/lvm"
Issues = "https://github.com/saforem2/lvm/issues"
Source = "https://github.com/saforem2/lvm"

[tool.hatch.version]
path = "src/lvm/__about__.py"

[tool.hatch.build]
exclude = [
  "src/lvm/outputs/",
  "**old**",
]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
packages = ["src/lvm"]

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=src/lvm --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "lvm/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

